[gd_scene load_steps=6 format=3 uid="uid://cxka0v1jvdqdt"]

[ext_resource type="Script" uid="uid://biki2502ng6u7" path="res://src/game/dig_spot.gd" id="1_n6px5"]
[ext_resource type="Texture2D" uid="uid://0k3qtjwpogoj" path="res://assets/cross.png" id="1_sm3pq"]

[sub_resource type="PlaneMesh" id="PlaneMesh_n6px5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_n6px5"]
size = Vector3(2, 59.017, 2)

[sub_resource type="BoxMesh" id="BoxMesh_5h0yw"]
size = Vector3(0.5, 0.5, 0.5)

[node name="DigSpot" type="Node3D"]
script = ExtResource("1_n6px5")

[node name="Decal" type="Decal" parent="."]
size = Vector3(4, 40, 4)
texture_albedo = ExtResource("1_sm3pq")
upper_fade = 1e-05
lower_fade = 1e-05
cull_mask = 1047554

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0234303, 0)
visible = false
layers = 3
mesh = SubResource("PlaneMesh_n6px5")
skeleton = NodePath("../Decal")

[node name="RayCast3D" type="RayCast3D" parent="."]
enabled = false
collision_mask = 16

[node name="GroundRayCast3D" type="RayCast3D" parent="."]
enabled = false
target_position = Vector3(0, -999, 0)

[node name="AcornDetectionArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.770888, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="AcornDetectionArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -29.2586, 0)
shape = SubResource("BoxShape3D_n6px5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="AcornDetectionArea3D"]
visible = false
mesh = SubResource("BoxMesh_5h0yw")

[connection signal="body_entered" from="AcornDetectionArea3D" to="." method="_on_acorn_detection_area_3d_body_entered"]
